opam-version: "1.2"
version: "1.0"
maintainer: "jnfoster@cs.cornell.edu"
authors: ["Nate Foster" "Benjamin C. Pierce"]
homepage: "https://github.com/boomerang-lang/boomerang"
bug-reports: "https://github.com/boomerang-lang/boomerang"
dev-repo: "https://github.com/boomerang-lang/boomerang"
license: "None"
depends: [
  "ocaml" {>= "5.0"}
  "dune" {>= "3.0"}
  "core"
  "core_unix"
  "ounit2"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
