(library
 (name boomerang_stdlib)
 (wrapped false)
 (modules boom_stdlib util algebra my_dict my_set datastructures my_disjoint_set
   my_heap my_priority_queue my_memoizer my_tree my_list_extensions
   string_utilities)
 (preprocess
  (pps ppx_deriving.std ppx_hash))
 (synopsis "Standard Library for OCaml")
 (libraries core core_unix str unix))
